--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "less": "^4.2.2",
+    "less-loader": "^12.2.0",
     "vite": "^6.2.0"
   }
 }
