--- a/package.json
+++ b/package.json
@@ -13,15 +13,12 @@
     "@tailwindcss/vite": "^4.0.17",
     "antd": "^5.24.5",
     "clsx": "^2.1.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "framer-motion": "^12.6.3",
     "react-router-dom": "^7.4.0",
     "tailwindcss": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
